--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
     <title>Bootstrap Dashboard</title>
 </head>
 <body>
-    <header>H</header>
+    <header>
+        <nav class="navbar navbar-expand-lg debug">
+            <div class="container-fluid">
+                <!-- Mobile Logo  -->
+                <a class="navbar-brand p-0 mobile-logo" href="#">
+                    <img src="assets/img/mobile-logo.png" width="50" alt="mobile-logo">
+                </a>
+                <!-- Desktop Logo  -->
+                <a class="navbar-brand p-0 hidden" href="#">
+                    <img src="assets/img/logo.svg" width="150" alt="logo">
+                </a>
+            </div>
+        </nav>
+    </header>
     <main>M</main>
     <footer>F</footer>
 </body>
