[add] form search

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
                 <a class="navbar-brand p-0 hidden" href="#">
                     <img src="assets/img/logo.svg" width="150" alt="logo">
                 </a>
+                <!-- inizo form  -->
+                <form class="d-flex flex-grow-1" role="search">
+                    <!-- icon search  -->
+                    <span class="input-group-text border-0 rounded-0 rounded-start">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </span>
+                    <!-- testo su search  -->
+                    <input class="form-control me-2 border-0 rounded-0 rounded-end" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
+                </form>
+                <!-- fine form  -->
             </div>
         </nav>
     </header>
