[add] nav-item e icon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img src="assets/img/logo.svg" width="150" alt="logo">
                 </a>
                 <!-- inizo form  -->
-                <form class="d-flex flex-grow-1" role="search">
+                <form class="d-flex flex-grow-1 debug" role="search">
                     <!-- icon search  -->
                     <span class="input-group-text border-0 rounded-0 rounded-start">
                         <i class="fa-solid fa-magnifying-glass"></i>
@@ -39,6 +39,28 @@
                     <input class="form-control me-2 border-0 rounded-0 rounded-end" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
                 </form>
                 <!-- fine form  -->
+                <!-- inizio nav-item e icon  -->
+                <div class="debug navbar-collapse collapse flex-grow-0">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link px-2" href="#">
+                                <i class="fa-solid fa-list-ul"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-2" href="#" aria-current="page">
+                                <i class="fa-solid fa-circle-question"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px2" href="#">
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- fine nav-item e icon  -->
+
             </div>
         </nav>
     </header>
