[add] dropstart and dropdown

--- a/index.html
+++ b/index.html
@@ -61,6 +61,28 @@
                 </div>
                 <!-- fine nav-item e icon  -->
 
+                <!-- inizio dropdown e dropstart -->
+                <div class="nav-item dropdown dropstart debug">
+                    <!-- icona campanella  -->
+                    <a class="nav-link px-2 text-warning" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">
+                        <i class="fa-solid fa-bell"></i>
+                    </a>
+                    <ul class="dropdown-menu debug">
+                        <li>
+                            <a class="dropdown-item" href="#">Profilo</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">Fatturazione</a>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- fine dropdown e dropstart  -->
             </div>
         </nav>
     </header>
