[add] defoult Cnvas Bootstrap

--- a/index.html
+++ b/index.html
@@ -113,6 +113,30 @@
                 </div>
             </div>
             <!-- fine sidebar  -->
+            
+            <!-- Main  -->
+            <div class="main debug">
+                <div class="bg_main">
+                    <div class="row m-0 justify-content-between">
+                        <!-- Nuovo studente  -->
+                        <div class="col-12 col-md-4 col-lg-auto my-4 order-md-3">
+                            <span class="fs-6 text-white me-2">Nuovo Studente</span>
+                            <!-- Canvas  -->
+                            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>
+
+                            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                                <div class="offcanvas-header">
+                                    <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+                                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                </div>
+                                <div class="offcanvas-body">
+                                    ...
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <footer>F</footer>
