--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <!-- inizio navbar  -->
-        <nav class="navbar navbar-expand-lg debug">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <!-- Mobile Logo  -->
                 <a class="navbar-brand p-0 mobile-logo" href="#">
@@ -31,7 +31,7 @@
                     <img src="/assets/img/logo.svg" width="150" alt="logo">
                 </a>
                 <!-- inizo form  -->
-                <form class="d-flex flex-grow-1 debug" role="search">
+                <form class="d-flex flex-grow-1" role="search">
                     <!-- icon search  -->
                     <span class="input-group-text border-0 rounded-0 rounded-start">
                         <i class="fa-solid fa-magnifying-glass"></i>
@@ -41,7 +41,7 @@
                 </form>
                 <!-- fine form  -->
                 <!-- inizio nav-item e icon  -->
-                <div class="debug navbar-collapse collapse flex-grow-0">
+                <div class="navbar-collapse collapse flex-grow-0">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link px-2" href="#">
@@ -63,12 +63,12 @@
                 <!-- fine nav-item e icon  -->
 
                 <!-- inizio dropdown e dropstart -->
-                <div class="nav-item dropdown dropstart debug">
+                <div class="nav-item dropdown dropstart">
                     <!-- icona campanella  -->
                     <a class="nav-link px-2 text-warning" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">
                         <i class="fa-solid fa-bell"></i>
                     </a>
-                    <ul class="dropdown-menu debug">
+                    <ul class="dropdown-menu">
                         <li>
                             <a class="dropdown-item" href="#">Profilo</a>
                         </li>
@@ -88,7 +88,7 @@
         </nav>
         <!-- fine navbar  -->
 
-        <div class="bottom d-flex debug">
+        <div class="bottom d-flex">
             <!-- inizio sidebar -->
             <div class="sidebar d-flex flex-column justify-content-between py-4 text-white text-center">
                 <div class="text-white text-center d-flex flex-column">
@@ -115,7 +115,7 @@
             <!-- fine sidebar  -->
             
             <!-- Main  -->
-            <div class="main debug">
+            <div class="main">
                 <div class="bg_main">
                     <div class="row m-0 justify-content-between">
                         <!-- Nuovo studente  -->
@@ -262,7 +262,26 @@
                                             });
                                           }, false);
                                         })();
-                                        </script>
+                                    </script>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fine studente  -->
+
+                        <!-- Inizio Boolean  -->
+                        <div class="col-12 col-md-4 col-lg-auto text-white my-4 order-md-1">
+                            <div class="col-12 col-lg-8">
+                                <div class="d-flex align-items-center">
+                                    <h1 class="fs-2 pe-2 mb-2 pt-1">Boolean</h1>
+                                    <span class="badge rounded-pill ms-bg-primary">Piano blaze</span>
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <span class="badge rounded-pill ms-bg-primary">3 app</span>
+                                    <i class="fa-solid fa-angles-right ps-1"></i>
+                                    <span class="badge rounded-pill ms-bg-primary ms-1 d-block d-lg-none">  +  </span>
+                                    <span class="badge rounded-pill ms-bg-primary ms-1 d-none d-lg-block">Boolean mobile app</span>
+                                    <span class="badge rounded-pill ms-bg-primary ms-1 d-none d-lg-block">Boolean web app</span>
+                                    <span class="badge rounded-pill ms-bg-primary ms-1 d-none d-lg-block">Boolean blog app</span>
                                 </div>
                             </div>
                         </div>
