--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <!-- inizio navbar  -->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg bg-white">
             <div class="container-fluid">
                 <!-- Mobile Logo  -->
                 <a class="navbar-brand p-0 mobile-logo" href="#">
@@ -33,11 +33,11 @@
                 <!-- inizo form  -->
                 <form class="d-flex flex-grow-1" role="search">
                     <!-- icon search  -->
-                    <span class="input-group-text border-0 rounded-0 rounded-start">
+                    <span class="input-group-text border-0 rounded-0 rounded-start bg_grey">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </span>
                     <!-- testo su search  -->
-                    <input class="form-control me-2 border-0 rounded-0 rounded-end" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
+                    <input class="form-control me-2 border-0 rounded-0 rounded-end bg_grey" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
                 </form>
                 <!-- fine form  -->
                 <!-- inizio nav-item e icon  -->
@@ -294,78 +294,84 @@
                         </div>
                     </div>
                     <!-- table -->
-                    <div class="card-body">
-                        <h4>Prossime classi</h4>
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th class="col">Nome</th>
-                                    <th class="col-3 text-center d-none d-md-table-cell">Data inizio</th>
-                                    <th class="col-1 text-center d-none d-sm-table-cell">ROI</th>
-                                    <th class="col-2 text-center">Stato</th>
-                                    <th class="col-1 text-center">Azioni</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 75</span></td>
-                                    <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
-                                    <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
-                                    <td class="col-2 text-center"><span class="badge rounded-pill text-bg-success">Success</span></td>
-                                    <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
-                                </tr>
-                                <tr>
-                                    <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 76</span></td>
-                                    <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
-                                    <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
-                                    <td class="col-2 text-center"><span class="badge rounded-pill text-bg-success">Success</span></td>
-                                    <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
-                                </tr>
-                                <tr>
-                                    <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 77</span></td>
-                                    <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
-                                    <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
-                                    <td class="col-2 text-center"><span class="badge rounded-pill text-bg-warning text-white">process</span></td>
-                                    <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
-                                </tr>
-                                <tr>
-                                    <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 78</span></td>
-                                    <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
-                                    <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
-                                    <td class="col-2 text-center"><span class="badge rounded-pill text-bg-success">Success</span></td>
-                                    <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
-                                </tr>
-                                <tr>
-                                    <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 79</span></td>
-                                    <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
-                                    <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
-                                    <td class="col-2 text-center"><span class="badge rounded-pill text-bg-danger">Danger</span></td>
-                                    <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
-                                </tr>
-                                <tr>
-                                    <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 80</span></td>
-                                    <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
-                                    <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
-                                    <td class="col-2 text-center"><span class="badge rounded-pill text-bg-success">Success</span></td>
-                                    <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
-                                </tr>
-                                <tr>
-                                    <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 81</span></td>
-                                    <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
-                                    <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
-                                    <td class="col-2 text-center"><span class="badge rounded-pill text-bg-danger">Danger</span></td>
-                                    <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
-                                </tr>
-                                <tr>
-                                    <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 82</span></td>
-                                    <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
-                                    <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
-                                    <td class="col-2 text-center"><span class="badge rounded-pill text-bg-success">Success</span></td>
-                                    <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+
+                    <div class="card">
+                        <h5 class="card-header">Featured</h5>
+                        <div class="card-body">
+                            <h4>Prossime classi</h4>
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th class="col">Nome</th>
+                                        <th class="col-3 text-center d-none d-md-table-cell">Data inizio</th>
+                                        <th class="col-1 text-center d-none d-sm-table-cell">ROI</th>
+                                        <th class="col-2 text-center">Stato</th>
+                                        <th class="col-1 text-center">Azioni</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 75</span></td>
+                                        <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
+                                        <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
+                                        <td class="col-2 text-center"><span class="badge rounded-pill text-bg-success">Success</span></td>
+                                        <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 76</span></td>
+                                        <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
+                                        <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
+                                        <td class="col-2 text-center"><span class="badge rounded-pill text-bg-success">Success</span></td>
+                                        <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 77</span></td>
+                                        <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
+                                        <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
+                                        <td class="col-2 text-center"><span class="badge rounded-pill text-bg-warning text-white">process</span></td>
+                                        <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 78</span></td>
+                                        <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
+                                        <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
+                                        <td class="col-2 text-center"><span class="badge rounded-pill text-bg-success">Success</span></td>
+                                        <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 79</span></td>
+                                        <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
+                                        <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
+                                        <td class="col-2 text-center"><span class="badge rounded-pill text-bg-danger">Danger</span></td>
+                                        <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 80</span></td>
+                                        <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
+                                        <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
+                                        <td class="col-2 text-center"><span class="badge rounded-pill text-bg-success">Success</span></td>
+                                        <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 81</span></td>
+                                        <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
+                                        <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
+                                        <td class="col-2 text-center"><span class="badge rounded-pill text-bg-danger">Danger</span></td>
+                                        <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col d-flex"><img src="assets/img/class-avatar.jpg" alt=""><span class="ms-1">Classe 82</span></td>
+                                        <td class="col-3 text-center d-none d-md-table-cell">15 Febb 2021</td>
+                                        <td class="col-1 text-center d-none d-sm-table-cell">20%</td>
+                                        <td class="col-2 text-center"><span class="badge rounded-pill text-bg-success">Success</span></td>
+                                        <td class="col-1 text-center"><div class="d-flex"><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></div></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                      </div>
+
+                    
                 </div>
                 
             </div>
